--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "basic-crud-project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/danielsunkim/Crud-basic-project#readme",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongodb": "^2.1.7",
     "mongoose": "^4.4.6",
-    "node": "0.0.0"
+    "node": "0.0.0",
+    "nodemon": "^1.9.1"
   }
 }
