--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "method-override": "^2.3.5",
     "mongodb": "^2.1.7",
     "mongoose": "^4.4.6",
     "node": "0.0.0",
