--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   },
   "homepage": "https://github.com/danielsunkim/Crud-basic-project#readme",
   "dependencies": {
+    "angular": "^1.5.0",
     "body-parser": "^1.15.0",
-    "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "method-override": "^2.3.5",
+    "jquery": "^2.2.1",
     "mongodb": "^2.1.7",
     "mongoose": "^4.4.6",
     "node": "0.0.0",
-    "nodemon": "^1.9.1"
+    "nodemon": "^1.9.1",
+    "q": "^1.4.1"
   }
 }
